--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -72,12 +72,12 @@
             </div>
 
             <div class="stages">
-                <input class="input" type="text" name="location"  placeholder="02 Upload Medical Reports" />
-                <input class="input" type="text" name="location"  placeholder="03 Consult with doctor" />
-                <input class="input" type="text" name="location"  placeholder="04 Fix Surgery" />
-                <input class="input" type="text" name="location"  placeholder="05 Hospital sent estimates" />
-                <input class="input" type="text" name="location"  placeholder="06 Payment" />
-                <input class="input" type="text" name="location"  placeholder="07 Surgery completed" />
+                <input type="text" name="location"  placeholder="02 Upload Medical Reports" />
+                <input type="text" name="location"  placeholder="03 Consult with doctor" />
+                <input type="text" name="location"  placeholder="04 Fix Surgery" />
+                <input type="text" name="location"  placeholder="05 Hospital sent estimates" />
+                <input type="text" name="location"  placeholder="06 Payment" />
+                <input type="text" name="location"  placeholder="07 Surgery completed" />
             </div>
         </div> 
 
