--- a/src/client/css/styles.CSS
+++ b/src/client/css/styles.CSS
@@ -112,10 +112,10 @@
   .FixConsultation{
     position: relative; 
     grid-area: FixConsultation;
+    font-family: "Nexa-Bold";  
     padding: 1rem 1rem 1rem 1rem;
   }
-  .FixConsultation input{  
-    
+  .FixConsultation input{      
     width: 100%;
     height: 40px; 
     padding-top: .5rem;
@@ -127,7 +127,6 @@
   }
   .FixConsultation .num { 
     position: absolute;
-    font-family: "Nexa-Bold"; 
     font-size: 1.2rem;
     top: 40%;
     right: 90%;    
@@ -135,7 +134,6 @@
   }
   .FixConsultation .tex { 
     position: absolute;
-    font-family: "Nexa-Bold"; 
     font-size: 1.2rem;
     top: 40%;
     left: 15%;
@@ -171,7 +169,6 @@
     width: 100%;
     height: 40px;
     margin-bottom: 1rem;
-    font-family: "Nexa-Bold";
     font-size: 1.2rem;
     opacity: 50%;
     text-indent: 20px; 
@@ -180,6 +177,9 @@
     border-radius: 10px;
     padding-top: 25px;
     padding-bottom: 25px;
+  }
+  .stages ::placeholder{
+    font-family: "Nexa-Bold";
   }
 
   .container3 {
@@ -274,8 +274,10 @@
   grid-area: treatments;
   padding: .5rem 1rem .5rem 1rem;  
 }
-
-.treatment-img{
+.treatments-det{
+  margin: .5rem;
+}
+.treatments-det .treatment-img{
   object-fit: cover;
   height: 350px;
 }
