--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -210,3 +210,60 @@ ul{
   letter-spacing: 0.05rem;
   padding: .5rem;
 }
+footer{
+  padding: 1rem;
+}
+@media only screen and (min-width: 768px)
+{
+  h1{
+        font-size: 2.2rem;
+    }    
+  h2{
+        font-size:2rem;
+    }
+  h3{
+        font-size: 1.6rem;
+    }
+  h4{
+        font-size: 1.4rem;
+    }
+  h5{
+        font-size: 1.2rem;
+    }
+  h6{
+      font-size: 1rem;
+  }
+  p{
+    font-size: 1.2rem;
+    word-spacing: 0.1rem;  
+    letter-spacing: 0.05rem;    
+    line-height: 1.6;
+    }
+}
+
+@media only screen and (min-width: 1024px){
+  h1{
+      font-size: 2.4rem;
+  }    
+  h2{
+      font-size:2.2rem;
+  }
+  h3{
+      font-size: 1.8rem;
+  }
+  h4{
+      font-size: 1.6rem;
+  }
+  h5{
+      font-size: 1.4rem;
+  }
+  h6{
+    font-size: 1.2rem;
+  }
+  p{
+  font-size: 1.4rem;
+  word-spacing: 0.1rem;  
+  letter-spacing: 0.05rem;    
+  line-height: 1.8;
+  }
+}
