--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.CSS">  
 </head>
 <body>   
-        <div>
+        <section>
             <nav class="first-nav">
                 <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="logo">
                 <i class="fas fa-bars"></i>
             </nav>
-        </div> 
-        <div class="container1">
+        </section> 
+        <section class="container1">
             <div class="heading1">
                 <h1>Find Affordable Healthcare</h1>
             </div>
@@ -36,11 +36,11 @@
             </div> 
 
             <section class="search-button1">
-                <button>Search</button>
+                <button class="primary">Search</button>
             </section>
-        </div> 
+        </section> 
 
-        <div class="container2">
+        <section class="container2">
             <div class="heading2">
                 <h1>How it works</h1>
             </div>
@@ -79,9 +79,9 @@
                 <input type="text" name="location"  placeholder="06 Payment" />
                 <input type="text" name="location"  placeholder="07 Surgery completed" />
             </div>
-        </div> 
+        </section> 
 
-        <div class="container3">
+        <section class="container3">
             <div class="heading3">
                 <h2>World Class Expert Doctors!</h2>
             </div>
@@ -137,8 +137,8 @@
                     </div>                          
                 </div>
             </div> 
-        </div>
-        <div class="container4">
+        </section>
+        <section class="container4">
             <div class="heading4">
                 <h2>Featered Medical Treatment</h2>         
             </div>
@@ -151,7 +151,7 @@
                     <img class="treatment-img" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--009.jpg"
                         alt="">
                     <div class="department-details">                    
-                            <h4 class="treatment-name">Dentistry</h4>
+                            <h5 class="treatment-name">Dentistry</h5>
                             <p>50+ Specialists</p>
                     </div>
                 </div> 
@@ -159,7 +159,7 @@
                     <img class="treatment-img" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--010.jpg"
                         alt="">
                     <div class="department-details">                    
-                        <h4 class="treatment-name">Cancer</h4>
+                        <h5 class="treatment-name">Cancer</h5>
                         <p>50+ Specialists</p>
                     </div>
                 </div> 
@@ -167,7 +167,7 @@
                     <img class="treatment-img" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--011.jpg"
                         alt="">
                     <div class="department-details">                    
-                        <h4 class="treatment-name">Cardiologic Treatment</h4>
+                        <h5 class="treatment-name">Cardiologic Treatment</h5>
                         <p>50+ Specialists</p>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                     <img class="treatment-img" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--006.jpg"
                         alt="">
                     <div class="department-details">                    
-                        <h4 class="treatment-name">Multi Organ Transplant</h4>
+                        <h5 class="treatment-name">Multi Organ Transplant</h5>
                         <p>50+ Specialists</p>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                     <img class="treatment-img" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--008.jpg"
                         alt="">
                     <div class="department-details">                    
-                        <h4 class="treatment-name">Orthopedic Surgery</h4>
+                        <h5 class="treatment-name">Orthopedic Surgery</h5>
                         <p>50+ Specialists</p>
                     </div>
                 </div>
@@ -191,13 +191,13 @@
                     <img class="treatment-img" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--007.jpg"
                         alt="">
                     <div class="department-details">                    
-                        <h4 class="treatment-name">Infertility Treatment</h4>
+                        <h5 class="treatment-name">Infertility Treatment</h5>
                         <p>50+ Specialists</p>
                     </div>
                 </div>
             </div> 
-        </div>
-        <div class="container5">
+        </section>
+        <section class="container5">
             <div class="heading5">
                 <h1>Exclusive Services</h1>
             </div>
@@ -234,19 +234,19 @@
                     <span class="on-icon">AMBULANCE</span>
                 </div>
             </div>
-        </div>      
-        <div class="container6">
+        </section>      
+        <section class="container6">
             <div class="heading6">
-                <h2>Need Help?</h2>         
+                <h5>Need Help?</h5>         
             </div>
             <div class="description6">
                 <p>Just let us know, we will be happy to assist you</p>         
             </div>
             <div class="enquiry-button">
-                <button class="Button-enquiry">Submit your enquiry</button>      
+                <button class="secondary">Submit your enquiry</button>      
             </div>
-        </div>
-        <div class="container7">
+        </section>
+        <section class="container7">
             <div class="transperent-logo">
                 <img src="../images/Transperent-logo.png">      
             </div>              
@@ -265,8 +265,8 @@
                 <i class="fab fa-instagram"></i>          
             </div> 
             <div class="copy-right">
-                <p >All rights reserved. © tvastra 2018</p>      
+                <p class="copy-right" >All rights reserved. © tvastra 2018</p>      
             </div>            
-        </div> 
+        </section> 
 </body>
 </html>
