--- a/src/client/css/styles.CSS
+++ b/src/client/css/styles.CSS
@@ -3,6 +3,7 @@
   --lt-skyblue:#87CEEB;
   --dark-blue:#152238;
   --light-blue:#94bedd;
+  --deep-blue:#7ab0d4;
   --grey:grey;
   --light-gray:#f0f0f5;
 }
@@ -15,6 +16,9 @@
   padding: 1rem 0rem;
   width: 30%;
 }
+.top-nav .nav-desktop{
+  display: none;
+}
 .top-nav .fa-bars{
   position: absolute; 
   top: 40%;
@@ -26,7 +30,7 @@
     text-align: center;
     background-color: var(--light-blue);
     width: 100%;
-}
+}            
 .container1 h1{
     padding: 2rem 6rem 1rem 6rem;
 }
@@ -71,7 +75,13 @@ padding: 1rem;
 .container2 p{
 padding: 1rem 3rem;
 }
-
+.desktop{
+  display: none;
+}
+.mob-tab
+{
+  display: initial;
+}
 .toggle-btn{
   display:flex;
   border: 1px solid;
@@ -158,7 +168,6 @@ color:var(--sky-blue);
 font-family: 'nexa-bold';
 padding: 0rem;
 }
-
 .name::before{
 display: block;
 content: "";
@@ -166,7 +175,6 @@ border-top: .2rem solid var(--sky-blue);
 width: 2rem;
 transform: translateY(.3rem);
 }
-
 .doc-details li{
 position: relative;
 text-align: left;
@@ -193,8 +201,9 @@ position: relative;
 margin-bottom: .5rem;
 }
 .treatments img{
-width:100%;
-object-fit:scale-down;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 .treatments .on-image{
 position: absolute;
@@ -314,6 +323,9 @@ bottom: 50%;
     font-size: 15px;
     color: var(--grey);
   }
+  .top-nav .nav-desktop{
+  display: none;
+}
   .container1{
     text-align: center;
     background-color: var(--light-blue);
@@ -369,13 +381,16 @@ padding: 0rem;
 .container2{
   text-align: center;
   width: 100%;
-  padding: 0rem;
+  padding: 0rem 0rem 1rem 0rem;
   }
   .container2 h2{
     padding: 2rem 0rem 1rem 0rem;
   }
   .container2 p{
   padding: .5rem 2rem 1rem 2rem ;
+  }
+  .desktop{
+    display: none;
   }
 .steps{
   display: grid;
@@ -433,14 +448,14 @@ font-family: 'nexa-bold';}
 .toggle-btn p:first-child {
 padding: 0 0.5rem;
 color: var(--sky-blue);
-font-size: 1.2rem;
+font-size: 1rem;
 }
 
 .toggle-btn p:last-child{
 padding: 0 0.5rem;
 text-align: start;
 color: var(--dark-blue);
-font-size: 1.2rem;
+font-size: 1rem;
 }
 .FC-use{
   grid-area: FC-use;
@@ -499,8 +514,9 @@ opacity: 50%;
     padding: 0rem;
     }
       .doc-details img{
-        height: 40%;
-        object-fit:cover;
+        width: 100%;
+        background-image: contain;
+        height: 30rem;
     }
     .doc-details h5{
       font-size: 1rem;
@@ -533,8 +549,10 @@ opacity: 50%;
       margin: 0;
       }
       .treatments img{
-      width:100%;
-      object-fit:scale-down;
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+      
       }
       .treatments .on-image{
       position: absolute;
@@ -598,7 +616,7 @@ font-size: .8rem;
 padding: 0rem 1rem 1rem 1rem;
 }
 .container6{
-  background-color: #7ab0d4;
+  background-color: var(--deep-blue);
   padding: 1rem 1rem 2rem 1rem;
   text-align: center;
   }
@@ -624,9 +642,11 @@ padding: 0rem 1rem 1rem 1rem;
       }
       .foot-list{
         grid-area:foot-list ;
+        padding: 1rem 1rem 1rem 0rem;
       }
       .foot-image{
         grid-area:foot-image ;
+        padding: 1rem;
       }
       .socialMedia{
       grid-area:socialMedia ;
@@ -638,7 +658,8 @@ padding: 0rem 1rem 1rem 1rem;
         grid-area:foot-rights ;
         color: var(--dark-blue);
         font-size: 1rem;
-        padding-bottom: 2rem;
+        font-weight: 700;
+        padding: 1rem;
         }
       .foot-rights p{
         color: var(--dark-blue);
@@ -660,38 +681,475 @@ padding: 0rem 1rem 1rem 1rem;
       }
       .container7 .socialMedia{
       position: relative;
-      padding: 1rem;
+      padding: 0rem;
       color: var(--dark-blue);
       font-size: .9rem;
       }
       .socialMedia .fa-facebook-f{
       position: absolute;
       left: 0%;
-      padding: 1rem;
+      padding: 0rem;
       bottom: 50%;
       }
       .socialMedia .fa-pinterest-p{
       position: absolute;
       left: 20%;
-      padding: 1rem;
+      padding: 0rem;
       bottom: 50%;
       }
       .socialMedia .fa-twitter{
       position: absolute;
       left: 40%;
-      padding: 1rem;
+      padding: 0rem;
       bottom: 50%;
       }
       .socialMedia .fa-google-plus-g{
       position: absolute;
       left: 60%;
-      padding: 1rem;
+      padding: 0rem;
       bottom: 50%;
       }
       .socialMedia .fa-instagram{
       position: absolute;
       left: 80%;
-      padding: 1rem;
+      padding: 0rem;
       bottom: 50%;
       }
+  }
+  @media only screen and (min-width: 1200px ){
+
+    .top-nav{
+      display: grid;
+      grid-template-columns: 20% 80%;
+    } 
+    .top-nav .logo-tvastra{
+      height: 60%;
+      width: 60%;
+      padding: 0rem;
+      margin: auto;
+      display: block;
+    }
+    .top-nav .nav-desktop{
+      display: grid;
+      padding: 1rem;
+      text-align: center;
+    }   
+    .desktop-nav{
+      padding: 0rem;
+      padding-left: 1rem;
+      text-align: right;
+    }
+    .desktop-nav ul{
+      list-style-type: none;
+      padding: 0rem;
+    }
+    .desktop-nav li{
+      color: var(--dark-blue);
+      padding: 1rem;
+      float: left;
+      font-size: .9rem;
+    }
+    .navButton1, .navButton2{
+      border-radius: 5px;
+      padding: .8rem 2rem;
+      font-size: .8rem;
+
+    }
+    .top-nav .fa-bars{
+      display: none;
+    } 
+    .container1{
+      text-align: center;
+      background-color: var(--light-blue);
+      width: 100%;
+      background-image: url(https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/img1.jpg);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      background-position: right;
+      height: 400px;
+  }       
+  .container1 h1{
+      padding: 7rem 6rem .5rem 5rem;
+      text-align: left;
+  }
+  .container1 p{
+    padding: .5rem 40rem .5rem 5rem;
+    text-align: left;
+    font-weight: 600;
+  }
+  .subcontainer1{
+    display: grid;
+    width: 900px;
+    padding: .5rem 0rem .5rem 5rem;
+    grid-gap: 0rem;
+    grid-template-columns: 30% 50% 20%;
+  }
+  .subcontainer1 .location{
+    position: relative;
+    padding: 0rem .1rem 0rem 0rem;
+  }
+  .location input{
+    text-indent: 5%;
+    height: 50px;
+  }
+  .location .fa-crosshairs{
+    position: absolute;
+    right: 4%;
+    top: 35%;
+    font-size: 1rem;
+    opacity: 50%;
+  }
+  .location .fa-map-marker-alt{
+    position: absolute;
+    left: 4%;
+    top: 35%;
+    font-size: 1rem;
+  }
+  .container1 .search1{
+  padding: 0rem;
+  }
+  .search1 input{
+    height: 50px;
+  }
+  .container1 .button1{
+    padding: 0rem;
+    }
+    .button1 button{
+      padding: 0px;
+      width: 100%;
+      height: 50px;
+    }
+    .container2{
+      text-align: center;
+      width: 100%;
+      padding: 2rem 2rem 5rem 4rem;
+      }
+      .container2 h2{
+      padding: 2rem;
+      padding-bottom: .5rem;
+      text-align: left;
+      }
+      .container2 p{
+      padding: 1rem 3rem;
+      letter-spacing: .03rem;
+      }
+      .mob-tab{
+        display: none;
+      }
+      .desktop{
+        display: initial;
+      }
+      .desktop p{
+        text-align: left;
+        padding: 2rem;
+        padding-top: .5rem;
+      }
+      .steps{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        padding-left: 1rem;
+        padding-bottom: 1rem;
+        grid-gap: 3rem;
+        height: auto;
+      }
+      .Stp1, .Stp2, .Stp3, .Stp4, .Stp5, .Stp6, .Stp7{
+        height: 100px;
+        width: 350px;
+      }
+      .toggle-btn2{
+        border-radius: 5px;
+        text-align: left;
+        padding:0%;
+        margin-bottom: 5rem;
+      }
+      .FC-use{
+        text-align: left;
+        padding: 0%;
+      }
+      .FC-use img{
+        height:auto;
+        width: auto;
+        padding-left: 0%;
+      }
+      .FC-use h3{
+        padding-left: 0%;
+        text-align: center;
+      }
+      .FC-use p{
+        padding-left: 0%;
+        text-align: center;
+      }
+      .container3{
+        padding: 2rem 3rem;
+      }
+      .container3 h2{
+        padding: 1 rem 2rem 1rem 0rem;
+        text-align: left;
+      }
+      .container3 p{
+        padding: 1 rem 2rem 1rem 0rem;
+        text-align: left;
+      }
+      .container3 .doctor-profile{
+        display: grid;
+        grid-template-columns: 24.5% 24.5% 24.5% 24.5%;
+        grid-gap: .2rem;
+        grid-template-rows: auto;
+        padding: 1rem;
+      }
+      .doc-details{
+        margin:0rem;
+        background-color: white;  
+        border-bottom: 0.5rem solid var(--lt-skyblue);
+        padding: 0%;
+      }
+      .doc-details img{
+        width: 100%;
+        object-fit: cover;
+        height: 20rem;
+    }
+    .dots{
+      padding-left: 1rem;
+    }
+    .dot1{
+      border: 2px solid ;
+      height: 10px;
+      width: 10px;
+      margin-top: 30px;
+      margin-left: 30px;
+      background-color: var(--dark-blue);
+      border-radius: 50%;
+      border-color:var(--sky-blue);
+      display: inline-block;
+    }
+    .dot{
+      height: 8px;
+      width: 8px;
+      margin-top: 30px;
+      margin-left: 5px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+    }
+  .container4{
+    background-color: white;
+    padding: 3rem;
+    }
+    .container4 h2{
+      padding: 1 rem 2rem;
+      text-align: left;
+    }
+    .container4 p{
+    text-align: left;
+    padding: 1em 2rem 2rem 2rem;
+    font-weight: bolder;
+    }
+      .treatment-grid{
+      position: relative;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      padding: 1rem 2rem 2rem 2rem;
+      grid-gap: .5rem;
+      }
+      .treatments{
+      position: relative;
+      margin: 0;
+      }
+      .treatments img{
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+      
+      }
+      .treatments .on-image{
+      position: absolute;
+      bottom: 0%;
+      color: white;
+      
+      }
+      .on-image h4{
+      padding-bottom: 0rem;
+      color: white;
+      font-size: 1rem;
+      }
+      
+      .on-image h5{
+      font-family: "Nexa-Light";
+      padding-top: .5rem;
+      color: white;
+      font-size: .8rem;
+      }
+      .background{
+      background-image: linear-gradient(to bottom, rgba(4,4,39,0), rgba(4,4,39,1));
+      width:100%;
+      height:30%;
+      bottom: 0rem;
+      position: absolute;
+      }
+      .container5{
+        background-color: var(--light-gray);
+        padding: 3rem;
+        text-align: center;
+        }
+        .container5 h1{
+        position: relative;
+        padding: 1rem 2rem;
+        text-align: left;
+        }
+        .container5 p{
+          text-align: left;
+          padding: 1em 2rem ;
+          font-weight: bolder;
+          font-size: .8rem;
+          }
+        .other-services{
+          width: auto;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          padding: 1rem 0rem ;
+        }
+        .service-grid{
+        position: relative;
+        justify-content: center;
+        width: 12rem;
+        height: 12rem;
+        background-color: white;
+        margin: .22rem ;
+        border-radius: 0px;
+        }
+        .service-grid img{
+          position: relative;
+          height:50%;
+          top: 10%;
+        }
+        .service-grid h6{
+        position: relative;
+        color: var(--grey);
+        font-size: .8rem;
+        top: 15%;
+        padding: 0rem 1rem 1rem 1rem;
+      }
+      .container6{
+        background-color: var(--deep-blue);
+        padding: 1rem 0rem 1rem 3rem;
+        text-align: center;
+        align-items: center;
+        display: grid;
+        grid-template-areas: "cont6-1 cont6-1 cont6-1 cont6-1 cont6-1 cont6-1  cont6-3"
+        "cont6-2 cont6-2 cont6-2 cont6-2 cont6-2 cont6-2 cont6-3";
+        }
+        .cont6-1{
+          grid-area: cont6-1;
+          text-align: left;
+        }
+        .cont6-2{
+          grid-area: cont6-2;
+          text-align: left;
+          align-items: flex-end;
+        }
+        .cont6-3{
+          grid-area: cont6-3;
+          padding: 0rem;
+        }
+        .container6 h2{
+        padding: 2rem 0rem .5rem 2rem;
+        color: white;
+        }
+        .container6 p{
+          padding: .5rem 0rem 2rem 2rem;
+          color: var(--dark-blue);
+          }
+        .container6 button{
+          border-radius: 3px;
+          height: 60px;
+          width: 250px;
+          float: left;
+          }
+          .container7{
+            background-color: white;
+            display: grid;
+            padding: 1rem 3rem 0rem 3rem;
+            grid-template-columns: 4fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            grid-template-areas: "foot-list foot-image"
+            "foot-rights socialMedia";
+            }
+            .foot-list{
+              grid-area:foot-list ;
+              padding: 0rem;
+            }
+            .foot-image{
+              grid-area:foot-image ;
+              padding: 0rem;
+              width: 80%;
+            }
+            .socialMedia{
+            grid-area:socialMedia ;
+            padding: 0rem;
+            color: var(--dark-blue);
+            font-weight: bold;
+            }
+            .foot-rights{
+              grid-area:foot-rights ;
+              color: var(--dark-blue);
+              font-size: 1rem;
+              font-weight: 700;
+              padding: 0rem 1rem;
+              }
+            .foot-rights p{
+              color: var(--dark-blue);
+              font-size: .9rem;
+              text-align: left;
+            }
+            .container7 li{
+              color: var(--dark-blue);
+              padding: 1rem;
+              float: left;
+              font-size: .9rem;
+            }
+            .container7 .socialMedia{
+            position: relative;
+            padding: 0rem;
+            color: var(--dark-blue);
+            font-size: 1.1rem;
+            }
+            .socialMedia .fa-facebook-f{
+            position: absolute;
+            right: 60%;
+            padding: 0rem;
+            bottom: 50%;
+            }
+            .socialMedia .fa-pinterest-p{
+            position: absolute;
+            right: 45%;
+            padding: 0rem;
+            bottom: 50%;
+            }
+            .socialMedia .fa-twitter{
+            position: absolute;
+            right: 30%;
+            padding: 0rem;
+            bottom: 50%;
+            }
+            .socialMedia .fa-google-plus-g{
+            position: absolute;
+            right: 15%;
+            padding: 0rem;
+            bottom: 50%;
+            }
+            .socialMedia .fa-instagram{
+            position: absolute;
+            right: 0%;
+            padding: 0rem;
+            bottom: 50%;
+            }
+            .under::before{
+              display: block;
+              content: "";
+              border-top: .5rem solid var(--sky-blue);
+              width: 100%;
+              transform: translateY(.3rem);
+              }
   }
