--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -92,6 +92,12 @@ background-color: var(--dark-blue);
 .secondary{
 background-color: var(--sky-blue);
 }
+.third{
+  background-color: white;
+  color: var(--dark-blue);
+  border: 1px solid;
+  border-color: var(--dark-blue);
+}
 li{
 font-family: "Nexa-Light";
 color: var(--dark-blue);
@@ -114,6 +120,59 @@ padding: .5rem;
   }
   h2{
     font-size: 1.5rem;
+    padding: 1rem;
+  }
+  h3{
+    font-size: 1.3rem;
+    padding: 1rem;
+  }
+  p{
+    font-size: 1rem;
+    padding: .5rem;
+  }
+  li{
+    font-size: 1rem;
+  }
+  input{
+    font-family: "Nexa-Light";
+    font-size: 0.8rem;
+    color: var(--dark-blue);
+    letter-spacing: 0.05rem;
+    width: 100%;
+    border: none;
+    }
+    ::placeholder{
+    font-family: "Nexa-Light";
+    font-size: .8rem;
+    color: gray;
+    letter-spacing: 0.05rem;
+    }
+    button{
+      color: white;
+      border: none;
+      font-size: .8rem;
+      letter-spacing: .1rem;
+      border-radius: 0%;
+      padding: inherit;
+      }
+      .primary{
+      background-color: var(--dark-blue);
+      }
+      .secondary{
+      background-color: var(--sky-blue);
+      }
+}
+@media only screen and (min-width: 1024px){
+  nav{
+    padding: .5rem;
+  }
+  h1{
+    font-size: 2.3rem;
+    font-weight: 900;
+    padding: 1rem;
+  }
+  h2{
+    font-size: 2.1rem;
     padding: 1rem;
   }
   h3{
