--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,6 +10,23 @@
     <body>
         <nav class="top-nav">
             <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" >
+            <div class="nav-desktop">
+                <div class="desktop-nav">          
+                    <ul>                        
+                        <li>Doctor</li>
+                        <li>Hospitals</li>
+                        <li>Treatment</li>
+                        <li>Other Services</li>
+                        <li>About</li>
+                    </ul>
+                    <button class="third navButton1">
+                        Login/Signup
+                    </button>
+                    <button class="primary navButton2">
+                        Get a Quote
+                    </button>
+                </div> 
+            </div>
             <i class="fas fa-bars" style=" vertical-align: middle;"></i>
         </nav>
         <section class="container1">
@@ -33,8 +50,15 @@
         </section>
 
         <section class="container2">
-            <h2>How it works</h2>
-            <p>Various facilities are provided here. But there is a protocol which needs to be followed so that you may get the services at its best.</p>
+            <h2 >How it works</h2>
+            <div class="mob-tab">
+                <p >Various facilities are provided here. But there is a protocol which needs to be followed so that you may get the services at its best.</p>
+            </div>
+            <div class="desktop">
+                <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                </p>
+            </div>           
             <div class="steps">
                 <a class="toggle-btn Stp1">
                     <p >01</p>
@@ -72,9 +96,16 @@
 
         <section class="container3">
             <h2 >World Class Expert Doctors!</h2>
-            <p >
-                The Unviersity of Texas Southwestern Medical Center has long been a world renouned research hospital. But until the '80s, you couldn't go there. Now, with the addition of the Aston center and Zale Lipshy hospital, UT Southwestern is also a mecca for patients.
-            </p>
+            <div class="mob-tab">
+                <p >
+                    The Unviersity of Texas Southwestern Medical Center has long been a world renouned research hospital. But until the '80s, you couldn't go there. Now, with the addition of the Aston center and Zale Lipshy hospital, UT Southwestern is also a mecca for patients.
+                </p>
+            </div>
+            <div class="desktop">
+                <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                </p>
+            </div>
             <div class="doctor-profile">
                 <div class="doc-details">
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--002.jpg" alt="">
@@ -113,14 +144,28 @@
                     </ul>
                 </div>
             </div>
+            <div class="dots desktop">
+                <span class="dot1"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
         </section>
         <section class="container4">
-            <h2 >Featured Medical Treatment</h2>
-            <p >
-                Join the thousands of others who have exercised their rights to quality healthcare at a price you can afford.
-            </p>
+            <h2 >Featured Medical Treatments</h2>
+            <div class="mob-tab">
+                <p >
+                    Join the thousands of others who have exercised their rights to quality healthcare at a price you can afford.
+                </p>
+            </div>
+            <div class="desktop">
+                <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                </p>
+            </div>
+            
             <div class="treatment-grid">
-                <div class="treatments">
+                <div class="treatments t1">
                     <div class="background"></div>
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--009.jpg" alt="">
                     <div class="on-image">
@@ -128,7 +173,7 @@
                         <h5 >50+ Specialists</h5>
                     </div>
                 </div>
-                <div class="treatments">
+                <div class="treatments t2">
                     <div class="background"></div>
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--010.jpg" alt="">
                     <div class="on-image">
@@ -136,7 +181,7 @@
                         <h5 >50+ Specialists</h5>
                     </div>
                 </div>
-                <div class="treatments">
+                <div class="treatments t3">
                     <div class="background"></div>
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--011.jpg" alt="">
                     <div class="on-image">
@@ -144,7 +189,7 @@
                         <h5 >50+ Specialists</h5>
                     </div>
                 </div>
-                <div class="treatments">
+                <div class="treatments t4">
                     <div class="background"></div>
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--006.jpg" alt="">
                     <div class="on-image">
@@ -152,7 +197,7 @@
                         <h5 >50+ Specialists</h5>
                     </div>
                 </div>
-                <div class="treatments">
+                <div class="treatments t5">
                     <div class="background"></div>
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--008.jpg" alt="">
                     <div class="on-image">
@@ -160,7 +205,7 @@
                         <h5 >50+ Specialists</h5>
                     </div>
                 </div>
-                <div class="treatments">
+                <div class="treatments t6">
                     <div class="background"></div>
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--007.jpg" alt="">
                     <div class="on-image">
@@ -172,9 +217,16 @@
         </section>
         <section class="container5">
             <h1>Exclusive Services</h1>
-            <p>
-                We want you to be comfortable and thus apart from treating your illness, we provide you with other services that you can see.
-            </p>
+            <div class="mob-tab">
+                <p>
+                    We want you to be comfortable and thus apart from treating your illness, we provide you with other services that you can see.
+                </p>
+            </div>
+            <div class="desktop">
+                <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                </p>
+            </div>            
             <div class="other-services">
                 <div class="service-grid">
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Icons-01.png" alt="">
@@ -189,23 +241,27 @@
                     <h6>Accomodation</h6>
                 </div>
                 <div class="service-grid">
-                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Icons-04.png" alt="">
-                    <h6>Lab</h6>
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Icons-07.png" alt="">
+                    <h6>Labs</h6>
                 </div>
                 <div class="service-grid">
-                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Icons-05.png" alt="">
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Icons-10.png" alt="">
                     <h6>Reports</h6>
                 </div>
-                <div class="service-grid">
+                <div class="service-grid mob-tab">
                     <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Icons-06.png" alt="">
                     <h6>Ambulance</h6>
+                </div>
+                <div class="service-grid desktop ">
+                    <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Icons-04.png" alt="">
+                    <h6>Others</h6>
                 </div>
             </div>
         </section>
         <section class="container6">
-            <h2>Need Help ?</h2>
-            <p>Just let us know, we will be happy to assist you.</p>
-            <button class="secondary">Submit your enquiry</button>
+            <h2 class="cont6-1">Need Help ?</h2>
+            <p class="cont6-2">Just let us know, we will be happy to assist you.</p>
+            <button class="secondary cont6-3">Submit your enquiry</button>
         </section>
         <section class="container7">
             <div class="foot-image">
@@ -231,6 +287,8 @@
                 <p>All Rights Reserved. © tvastra 2018</p>
             </div>
         </section>
+        <div class="under desktop">
 
+        </div>
     </body>
 </html>
