--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -214,6 +214,11 @@
                     </div>
                 </div>
             </div>
+            <div class="dots desktop">
+                <span class="dot2"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
         </section>
         <section class="container5">
             <h1>Exclusive Services</h1>
