--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/themes.css">
-        <link rel="stylesheet" href="../css/styles.CSS">               
+        <link rel="stylesheet" href="../css/index.CSS">               
     </head>
     <body>
         <nav class="top-nav">
@@ -48,7 +48,6 @@
                 </div>   
             </div>                    
         </section>
-
         <section class="container2">
             <h2 >How it works</h2>
             <div class="mob-tab">
@@ -93,7 +92,6 @@
                 </a>
             </div>            
         </section>
-
         <section class="container3">
             <h2 >World Class Expert Doctors!</h2>
             <div class="mob-tab">
@@ -152,7 +150,7 @@
             </div>
         </section>
         <section class="container4">
-            <h2 >Featured Medical Treatments</h2>
+            <h2 >Featured Medical Treatment</h2>
             <div class="mob-tab">
                 <p >
                     Join the thousands of others who have exercised their rights to quality healthcare at a price you can afford.
@@ -264,9 +262,11 @@
             </div>
         </section>
         <section class="container6">
-            <h2 class="cont6-1">Need Help ?</h2>
+            <h1 class="cont6-1">Need Help ?</h2>
             <p class="cont6-2">Just let us know, we will be happy to assist you.</p>
-            <button class="secondary cont6-3">Submit your enquiry</button>
+            <div class="cont6-3">
+                <button class="secondary ">Submit your enquiry</button>
+            </div>
         </section>
         <section class="container7">
             <div class="foot-image">
@@ -293,7 +293,6 @@
             </div>
         </section>
         <div class="under desktop">
-
         </div>
     </body>
 </html>
