--- a/src/client/views/doctor.html
+++ b/src/client/views/doctor.html
@@ -10,10 +10,11 @@
     <body>
         <nav class="top-nav">
             <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" >
-            <i class="fas fa-bars" style=" vertical-align: middle;"></i>
+            <i class="fas fa-bars"></i>
         </nav>
         <div class="home">
             <h6>Home/Doctor List</h6>
+            <button class="doctor-button">Sort by <i class="arrow right"></i> </button>
         </div>
     </body>
 </html>
